--- a/site.html
+++ b/site.html
@@ -8,5 +8,7 @@
 </head>
 <body>
   <h1>Drawing and Pictures</h1>
+  <img src="images/Foto/joseph-roulin.jpg" alt="">
+  <img src="images/Foto/lands-end.jpg" alt="">
 </body>
 </html>
